# thesis-project

./: .gitignore  LICENSE  Makefile  README.md
code/: pyproject.toml
code/data/cptu/: cpt-04.csv  cpt-05.csv
code/src/core/: randomfield.py
src/thesis/: Makefile
thesis/: main.typ
