[project]
name = "core"
version = "0.1.0"
description = "Modular Python scripts supporting my thesis project."
authors = [
    { name = "Francesco Franco", email = "ffrancoa97@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.12.4",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["E501"]
